# Gabriel

./: CMakeLists.txt  main.c
arquivos/txt/: clientes.txt
bibliotecas/: conio.c  utilidades.c  utilidades.h  validator.c  validator.h
controller/: cliente_controller.c  cliente_controller.h
modelo/: cliente.h  ponteiros.h  variaveis.h
persistencia/: clientes_txt.c  clientes_txt.h
persistencia/cadastro_txt/: clientes_txt.c  clientes_txt.h
